#[[
 Copyright (C) 2020 hurricane <l@stdb.io>. All rights reserved.
  +------------------------------------------------------------------+
   |                                                                  |
   |                                                                  |
   |  #####                                                           |
   | #     # #####   ##   #####  #####  # #    # ######  ####   ####  |
   | #         #    #  #  #    # #    # # ##   # #      #      #      |
   |  #####    #   #    # #    # #    # # # #  # #####   ####   ####  |
   |       #   #   ###### #####  #####  # #  # # #           #      # |
   | #     #   #   #    # #   #  #   #  # #   ## #      #    # #    # |
   |  #####    #   #    # #    # #    # # #    # ######  ####   ####  |
   |                                                                  |
   |                                                                  |
   +------------------------------------------------------------------+
 ]]


cmake_minimum_required(VERSION 3.0.0)

aux_source_directory(. TEST_SRC)

add_executable(tests ${TEST_SRC})

### google test/mock
target_include_directories(tests PRIVATE ${GTEST_INCLUDE_DIRS})
target_include_directories(tests PRIVATE ${GMOCK_INCLUDE_DIRS})

target_link_libraries(tests gtest GTest::Main)

